FIX: sr-only overflow bug

--- a/web/tailwind/components/slider.css
+++ b/web/tailwind/components/slider.css
@@ -5,6 +5,7 @@
         --snap-size: calc(
             (100% - var(--snap-gap) * (var(--snap-cols) - 1)) / var(--snap-cols)
         );
+        position: relative;
         display: grid;
         grid-auto-flow: column;
         grid-auto-columns: var(--snap-size);
